fixed paragraph width on mobile, edited tumblr link (oops)

--- a/app/sass/content/_mobile.scss
+++ b/app/sass/content/_mobile.scss
@@ -6,5 +6,4 @@
 	}	
 
 	.content p {
-		max-width: 90%;
 	}
